[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioarp"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Karen Petrosyan", email = "kar.petrosyanpy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "anyio"
]

[project.urls]
Documentation = "https://github.com/karosis88/aioarp#readme"
Issues = "https://github.com/karosis88/aioarp/issues"
Source = "https://github.com/karosis88/aioarp"

[tool.hatch.version]
path = "aioarp/__about__.py"

[tool.ruff]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028", "F403"]
line-length = 120

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ["unasync.py", "_mock.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true